--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,30 @@ iframe#tela {
     height: 473px;
 }
 
-/* section#redes-sociais {
-    width: 30px;
-    height: 50vh;
-    background-color: brown;
+section#redes-sociais {
+    display: flex;
+    flex-direction: column;
     float: right;
-    margin-top: 50vh;
-} */
+    width: 60px;
+    height: 315px;
+} 
+
+section#redes-sociais img:hover {
+    width: 45px;
+    height: 45px;
+    border: 2px solid rgba(255, 255, 255, 0.06);
+    border-radius: 45%;
+    box-shadow: 0px 12px 16px -5px rgba(0, 0, 0, 0.614);
+    transform: translate(-2px, -2px);
+    transition: all 0.4s;
+}
+
+section#redes-sociais img {
+    width: 40px;
+    height: 40px;
+    margin: 4px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    box-shadow: 0px 6px 12px -5px rgba(0, 0, 0, 0.807);
+} 
+
