--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html, body {
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 main {
